[package]
name = "cloakprobe"
version = "0.1.3"
edition = "2021"
authors = ["Péter Veres"]
license = "AGPL-3.0"
description = "Privacy-first, security-focused IP information service for Cloudflare"
repository = "https://github.com/drmckay/cloakprobe"
keywords = ["ip", "network", "cloudflare", "asn", "geolocation"]
categories = ["web-programming", "network-programming"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
ipnetwork = "0.21"
thiserror = "2.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
memmap2 = "0.9"
tera = "1.19"
tempfile = "3.12"
flate2 = "1.0"
quick-xml = "0.37"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"